clipped background color to prevent horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .aboutMe {
+  overflow-x: clip;
   position: relative;
   display: flex;
 
@@ -170,7 +171,7 @@ body {
   .aboutMe > .background {
     height: 128%;
     width: 200%;
-    transform: rotate(-15deg) translateX(-100px) translateY(-25px);
+    transform: rotate(-15deg) translateX(-100px) translateY(-500px);
   }
   .aboutMe > .name {
     margin: 0px;
